@@ -340,6 +340,8 @@
 	Fixed leading and collecting error messages on file operations via system
 	calls.
 
+	Fixed navigation back in history from custom view.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
